// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetWorkspace loadAuthorizationJSON should correctly parse and assign JSON properties 1`] = `
Object {
  "grants": Array [
    Object {
      "grants": Array [
        Object {
          "actions": Array [
            "action1",
          ],
          "player": "Player1",
          "tag": "Grant",
        },
      ],
      "referenceStack": Array [
        Object {
          "context": undefined,
          "key": "Room1",
          "tag": "Room",
          "universalKey": undefined,
        },
      ],
    },
  ],
  "key": "Test",
}
`;

exports[`AssetWorkspace loadJSON should correctly parse and assign JSON properties 1`] = `
Object {
  "components": Array [
    Object {
      "context": undefined,
      "key": "testRoom",
      "shortName": "Test Room",
      "tag": "Room",
      "universalKey": "ROOM#001",
    },
  ],
  "key": "Test",
  "metaData": Array [],
  "universalKey": "ASSET#Test",
}
`;

exports[`AssetWorkspace setWML should correctly parse WML input 1`] = `
Object {
  "components": Array [
    Object {
      "context": undefined,
      "exits": Array [
        Object {
          "description": "welcome",
          "to": "ROOM#UUID-1",
        },
      ],
      "key": "a123",
      "shortName": undefined,
      "tag": "Room",
      "universalKey": "ROOM#UUID-0",
    },
    Object {
      "context": undefined,
      "exits": Array [
        Object {
          "description": "vortex",
          "to": "ROOM#UUID-0",
        },
      ],
      "key": "b456",
      "shortName": undefined,
      "tag": "Room",
      "universalKey": "ROOM#UUID-1",
    },
  ],
  "key": "Test",
  "metaData": Array [],
  "universalKey": "ASSET#Test",
}
`;
